--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/offline-theme-dark-indicator.css">
   <link rel="stylesheet" href="css/offline-language-english-indicator.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="js/offline.min.js"></script>
   <script>
     var run = function(){
@@ -28,9 +26,11 @@
   <div class="map-canvas" id="gmap"></div>
 
   <script type="text/html" id="location">
-    <li class="location-item" data-bind="text: title, click: openInfowindow"></li>
+    <li class="location-item" data-bind="text: title, click: $root.openInfowindow"></li>
   </script>
-<script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABJZag3_E--YWR5jzWr8Mz_PnAnwsU7xk"></script>
+   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
   <script src="js/app.js"></script>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABJZag3_E--YWR5jzWr8Mz_PnAnwsU7xk&callback=initialize" onerror="googleError()"></script>
 </body>
 </html>
